src/objects/Key__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>ClientId__c</fullName>
        <label>ClientId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerSecret__c</fullName>
        <label>CustomerSecret</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <label>UserName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Key</label>
</CustomObject>